fix: busy indi top everything & change pass api
